Added Nav to Index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
     <title>Home</title>
 </head>
 <body>
-    
+    <header>
+        <div class="flex bg-orange-500 w-screen gap-4 " id="nav">
+            <div class="menuItem mx-4 my-2">
+                <img src="https://placeholder.pics/svg/100x100">
+                    <a  href="#nav"></a>
+                </img>
+            </div>
+            <div class="flex gap-16 w-screen my-2 items-center justify-evenly">
+                <div class="menuItem">
+                    <a href="#nav">Home</a>
+                </div>
+                <div class="menuItem">
+                    <a href="#nav">About me</a>
+                </div>
+                <div class="menuItem">
+                    <a href="#nav">Contact me</a>
+                </div>
+                <div class="menuItem float-right">
+                    <button>Download CV</button>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
