--- a/index.html
+++ b/index.html
@@ -16,19 +16,24 @@
                     <a  href="#nav"></a>
                 </img>
             </div>
-            <div class="flex gap-16 w-screen my-2 items-center justify-evenly">
-                <div class="menuItem">
+            <div class="flex gap-16 w-screen my-2 items-center justify-evenly hidden ">
+                <div class="menuItem ">
                     <a href="#nav">Home</a>
                 </div>
-                <div class="menuItem">
+                <div class="menuItem ">
                     <a href="#nav">About me</a>
                 </div>
-                <div class="menuItem">
+                <div class="menuItem ">
                     <a href="#nav">Contact me</a>
                 </div>
-                <div class="menuItem float-right">
+                <div class="menuItem float-right ">
                     <button>Download CV</button>
                 </div>
+            </div>
+            <div class="flex menuItem w-screen items-center my-5 mr-5">
+                <button class="float-right">    
+                    <img src="menu-svgrepo-com.svg" width=50 height=50>
+                </button>
             </div>
         </div>
     </header>
