--- a/index.html
+++ b/index.html
@@ -37,5 +37,21 @@
             </div>
         </div>
     </header>
+    <div class="flex flex-col">
+        <video width="100%" height="80%" autoplay muted controls> 
+            <source src="portfolioVideo.mp4" type="video/mp4">
+            Your browsers does not support video
+        </video>
+        <button>Pause & Play Place Holder</button>
+        <h1 class="text-5xl my-2">About me</h1>
+        <p class="text-2l">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde molestias corrupti veniam et maiores! Nisi quasi odio non animi. Expedita quis pariatur exercitationem iusto cupiditate rerum aliquid deleniti doloribus earum!</p>
+        <i class="text-base text-slate-400">Flavour Text</i>
+    </div>
+    <div class="w-screen">
+        <img class="w-screen" src="https://placeholder.pics/svg/600x300">
+        <h1 class="text-5xl my-2">About me</h1>
+        <p class="text-2l">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde molestias corrupti veniam et maiores! Nisi quasi odio non animi. Expedita quis pariatur exercitationem iusto cupiditate rerum aliquid deleniti doloribus earum!</p>
+        <i class="text-base text-slate-400">Flavour Text</i>
+    </div>
 </body>
 </html>
