Added Section tag to sections and added nav to all html pages

--- a/about.html
+++ b/about.html
@@ -8,6 +8,34 @@
     <title>About me</title>
 </head>
 <body>
+    <header>
+        <div class="flex bg-orange-500 w-screen gap-4 " id="nav">
+            <div class="menuItem mx-4 my-2">
+                <img src="https://placeholder.pics/svg/100x100">
+                    <a  href="#nav"></a>
+                </img>
+            </div>
+            <div class="flex gap-16 w-screen my-2 items-center justify-evenly hidden ">
+                <div class="menuItem ">
+                    <a href="#nav">Home</a>
+                </div>
+                <div class="menuItem ">
+                    <a href="#nav">About me</a>
+                </div>
+                <div class="menuItem ">
+                    <a href="#nav">Contact me</a>
+                </div>
+                <div class="menuItem float-right ">
+                    <button>Download CV</button>
+                </div>
+            </div>
+            <div class="flex menuItem w-screen items-center my-5 mr-5">
+                <button class="float-right">    
+                    <img src="menu-svgrepo-com.svg" width=50 height=50>
+                </button>
+            </div>
+        </div>
+    </header>
     
 </body>
 </html>
