--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             </div>
         </div>
     </header>
+    <section>
     <div class="flex flex-col">
         <video width="100%" height="80%" autoplay muted controls> 
             <source src="portfolioVideo.mp4" type="video/mp4">
@@ -46,14 +47,17 @@
         <h1 class="text-5xl my-2">About me</h1>
         <p class="text-2l">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde molestias corrupti veniam et maiores! Nisi quasi odio non animi. Expedita quis pariatur exercitationem iusto cupiditate rerum aliquid deleniti doloribus earum!</p>
         <i class="text-base text-slate-400">Flavour Text</i>
-        <a class="text-left" href="about.html">Hello</a>
+        <a class="text-left" href="about.html">About me</a>
     </div>
+    </section>
+    <section>
     <div class="flex flex-col">
         <img class="w-screen" src="https://placeholder.pics/svg/600x300">
         <h1 class="text-5xl my-2">Contact me</h1>
         <p class="text-2l">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde molestias corrupti veniam et maiores! Nisi quasi odio non animi. Expedita quis pariatur exercitationem iusto cupiditate rerum aliquid deleniti doloribus earum!</p>
         <i class="text-base text-slate-400">Flavour Text</i>
-        <a class="text-left" href="contact.html">Hello</a>
+        <a class="text-left" href="contact.html">Contact</a>
     </div>
+    </section>
 </body>
 </html>
