--- a/index.html
+++ b/index.html
@@ -44,20 +44,27 @@
             Your browsers does not support video
         </video>
         <button>Pause & Play Place Holder</button>
-        <h1 class="text-5xl my-2">About me</h1>
+        <h1 class="text-5xl my-2 mt-16">About me</h1>
         <p class="text-2l">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde molestias corrupti veniam et maiores! Nisi quasi odio non animi. Expedita quis pariatur exercitationem iusto cupiditate rerum aliquid deleniti doloribus earum!</p>
         <i class="text-base text-slate-400">Flavour Text</i>
         <a class="text-left" href="about.html">About me</a>
     </div>
     </section>
     <section>
-    <div class="flex flex-col">
+    <div class="flex flex-col mt-16">
         <img class="w-screen" src="https://placeholder.pics/svg/600x300">
         <h1 class="text-5xl my-2">Contact me</h1>
         <p class="text-2l">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde molestias corrupti veniam et maiores! Nisi quasi odio non animi. Expedita quis pariatur exercitationem iusto cupiditate rerum aliquid deleniti doloribus earum!</p>
         <i class="text-base text-slate-400">Flavour Text</i>
         <a class="text-left" href="contact.html">Contact</a>
     </div>
+    </section>
+    <section>
+        <div class="mt-16">
+            <h1 class="text-5xl my-2">Portfolio</h1>
+            <div class="portfolio">
+            </div>
+        </div>
     </section>
 </body>
 </html>
