Added portfolio json with test data and portfolio section

--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
             <h1 class="text-5xl my-2">Portfolio</h1>
             <div class="portfolio">
             </div>
+            <div>
+                <!-- Place Holder for control buttons -->
+                <button>Scroll Left</button>
+                <button>Play</button>
+                <button>Scroll right</button>
+            </div>
         </div>
     </section>
 </body>
