Added Scrolling to the portfolio section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,15 @@
     <section>
         <div class="mt-16">
             <h1 class="text-5xl my-2">Portfolio</h1>
-            <div class="portfolio">
+            <div class="scroller">
+                <div class="tag-list scroller__inner">
+                    <img src="https://placeholder.pics/svg/100x100">
+                    <img src="https://placeholder.pics/svg/100x100">
+                    <img src="https://placeholder.pics/svg/100x100">
+                    <img src="https://placeholder.pics/svg/100x100">
+                    <img src="https://placeholder.pics/svg/100x100">
+                    <img src="https://placeholder.pics/svg/100x100">
+                </div>
             </div>
             <div>
                 <!-- Place Holder for control buttons -->
