Fixed scrolling issues

--- a/index.html
+++ b/index.html
@@ -60,16 +60,15 @@
     </div>
     </section>
     <section>
-        <div class="mt-16">
+        <div class="mt-16 ">
             <h1 class="text-5xl my-2">Portfolio</h1>
-            <div class="scroller">
-                <div class="tag-list scroller__inner">
-                    <img src="https://placeholder.pics/svg/100x100">
-                    <img src="https://placeholder.pics/svg/100x100">
-                    <img src="https://placeholder.pics/svg/100x100">
-                    <img src="https://placeholder.pics/svg/100x100">
-                    <img src="https://placeholder.pics/svg/100x100">
-                    <img src="https://placeholder.pics/svg/100x100">
+            <div class="scroller flex flex-col">
+                <div class="tag-list scroller__inner portflio">
+                    <img src="https://placeholder.pics/svg/250x200">
+                    <img src="https://placeholder.pics/svg/250x200">
+                    <img src="https://placeholder.pics/svg/250x200">
+                    <img src="https://placeholder.pics/svg/250x200">
+                    <img src="https://placeholder.pics/svg/250x200">
                 </div>
             </div>
             <div>
