Added Portfolios from the json into the scroller

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
     <script defer src="scripts.js"></script>
     <title>Home</title>
@@ -63,11 +64,7 @@
         <div class="mt-16 ">
             <h1 class="text-5xl my-2">Portfolio</h1>
             <div class="scroller flex flex-col">
-                <div class="tag-list scroller__inner portflio">
-                    <img src="https://placeholder.pics/svg/250x200">
-                    <img src="https://placeholder.pics/svg/250x200">
-                    <img src="https://placeholder.pics/svg/250x200">
-                    <img src="https://placeholder.pics/svg/250x200">
+                <div class="tag-list scroller__inner portfolio">
                     <img src="https://placeholder.pics/svg/250x200">
                 </div>
             </div>
