--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         </div>
         <div class="floatingNav flex flex-col w-5/6 py-4 gap-4 items-center text-center justify-evenly bg-orange-500 absolute right-0 md:hidden">
             <div class="menuItem w-full">
-                <a href="index.html#top">Home</a>
+                <a class= "home2" href="index.html#top">Home</a>
             </div>
             <div class="menuItem w-full">
                 <a href="about.html">About me</a>
@@ -48,6 +48,7 @@
             <div class="menuItem float-right rounded-full bg-black py-2 px-3">
                 <button>Download CV <i class="fa-solid fa-download rounded-full bg-white text-black p-1 "></i></button>
             </div>
+            <button class="navClose absolute top-2 -left-16 text-4xl rounded-full bg-gray-800 p-2"><i class="fa-regular fa-circle-xmark"></i></button>
         </div>
     </header>
     
