--- a/index.html
+++ b/index.html
@@ -12,39 +12,39 @@
 <body id="top">
     <div class="homeMain" id="Main">
     <header class="navBarMain sticky top-0">
-        <div class="flex bg-orange-500 w-screen gap-4" id="nav">
-            <div class="menuItem mx-4 my-1">
-                    <a  href="index.html#top"><img src="https://placeholder.pics/svg/80x80"></a>
+        <div class="flex bg-orange-500 w-screen gap-4">
+            <div class="menuItem mx-4 my-1 ">
+                    <a href="index.html#top"><img class="logoButton transition-transform hover:scale-110" src="https://placeholder.pics/svg/100x50"></a>
             </div>
             <div class="flex gap-8 w-full my-2 items-center justify-evenly hidden md:flex ">
-                <div class="menuItem ">
-                    <a href="index.html#top">Home</a>
+                <div class="menuItem">
+                    <a class="py-3 px-3 text-2xl hover:bg-orange-300 hover:text-black" href="index.html#top">Home</a>
                 </div>
                 <div class="menuItem ">
-                    <a href="about.html">About me</a>
+                    <a class="py-3 px-3 text-2xl hover:bg-orange-300 hover:text-black" href="about.html">About me</a>
                 </div>
                 <div class="menuItem ">
-                    <a href="contact.html">Contact me</a>
+                    <a class="py-3 px-3 text-2xl hover:bg-orange-300 hover:text-black" href="contact.html">Contact me</a>
                 </div>
                 <div class="menuItem float-right rounded-full bg-black py-2 px-3 ">
                     <button>Download CV <i class="fa-solid fa-download rounded-full bg-white text-black p-1 "></i></button>
                 </div>
             </div>
-            <div class="flex menuItem items-center md:hidden absolute left-32 right-4 top-7">
+            <div class="flex menuItem items-center md:hidden absolute right-0 top-2">
                 <button class="navchange float-right md:hidden">    
                     <img src="menu-svgrepo-com.svg" width=50 height=50>
                 </button>
             </div>
         </div>
-        <div class="floatingNav flex flex-col w-5/6 py-4 gap-4 items-center text-center justify-evenly bg-orange-500 absolute right-0 md:hidden">
+        <div class="floatingNav flex flex-col w-5/6 py-2 gap-8 items-center text-center justify-evenly bg-orange-500 absolute right-0 md:hidden">
             <div class="menuItem w-full">
-                <a class= "home2" href="index.html#top">Home</a>
+                <a class="home2 p-4 hover:bg-orange-300 hover:text-black" href="index.html#top">Home</a>
             </div>
             <div class="menuItem w-full">
-                <a href="about.html">About me</a>
+                <a class="p-4 hover:bg-orange-300 hover:text-black" href="about.html">About me</a>
             </div>
             <div class="menuItem w-full ">
-                <a href="contact.html">Contact me</a>
+                <a class="p-4 hover:bg-orange-300 hover:text-black" href="contact.html">Contact me</a>
             </div>
             <div class="menuItem float-right rounded-full bg-black py-2 px-3">
                 <button>Download CV <i class="fa-solid fa-download rounded-full bg-white text-black p-1 "></i></button>
