--- a/about.html
+++ b/about.html
@@ -11,42 +11,42 @@
     </head>
 <body>
     <header class="navBarMain sticky top-0">
-        <div class="flex bg-orange-500 w-screen gap-4">
+        <div class="flex bg-orange-500 w-screen gap-4 font-mono">
             <div class="menuItem mx-4 my-1 ">
                     <a href="index.html#top"><img class="logoButton transition-transform hover:scale-110" src="https://placeholder.pics/svg/100x50"></a>
             </div>
-            <div class="flex gap-8 w-full my-2 items-center justify-evenly hidden md:flex ">
+            <div class="flex gap-8 w-full my-1 items-center justify-evenly hidden md:flex ">
                 <div class="menuItem">
-                    <a class="py-3 px-3 text-2xl hover:bg-orange-300 hover:text-black" href="index.html#top">Home</a>
+                    <a class="py-2 px-3 text-2xl hover:bg-orange-300 hover:text-black hover:underline" href="index.html#top">Home</a>
                 </div>
                 <div class="menuItem ">
-                    <a class="py-3 px-3 text-2xl hover:bg-orange-300 hover:text-black" href="about.html">About me</a>
+                    <a class="py-2 px-3 text-2xl hover:bg-orange-300 hover:text-black hover:underline" href="about.html">About me</a>
                 </div>
                 <div class="menuItem ">
-                    <a class="py-3 px-3 text-2xl hover:bg-orange-300 hover:text-black" href="contact.html">Contact me</a>
+                    <a class="py-2 px-3 text-2xl hover:bg-orange-300 hover:text-black hover:underline" href="contact.html">Contact me</a>
                 </div>
                 <div class="menuItem float-right rounded-full bg-black py-2 px-3 ">
                     <button>Download CV <i class="fa-solid fa-download rounded-full bg-white text-black p-1 "></i></button>
                 </div>
             </div>
             <div class="flex menuItem items-center md:hidden absolute right-0 top-2">
-                <button class="navchange float-right md:hidden">    
+                <button class="navchange float-right md:hidden">   
                     <img src="menu-svgrepo-com.svg" width=50 height=50>
                 </button>
             </div>
         </div>
-        <div class="floatingNav flex flex-col w-5/6 py-2 gap-8 items-center text-center justify-evenly bg-orange-500 absolute right-0 md:hidden">
-            <div class="menuItem w-full">
-                <a class="home2 p-4 hover:bg-orange-300 hover:text-black" href="index.html#top">Home</a>
+        <div class="floatingNav flex flex-col w-5/6 py-2 gap-8 items-right text-right justify-evenly bg-orange-500 absolute right-0 md:hidden">
+            <div class="menuItem w-full mt-2">
+                <a class="home2 p-4 hover:bg-orange-300 hover:text-black hover:underline" href="index.html#top">Home</a>
             </div>
             <div class="menuItem w-full">
-                <a class="p-4 hover:bg-orange-300 hover:text-black" href="about.html">About me</a>
+                <a class="p-4 hover:bg-orange-300 hover:text-black hover:underline" href="about.html">About me</a>
             </div>
             <div class="menuItem w-full ">
-                <a class="p-4 hover:bg-orange-300 hover:text-black" href="contact.html">Contact me</a>
+                <a class="p-4 hover:bg-orange-300 hover:text-black hover:underline " href="contact.html">Contact me</a>
             </div>
-            <div class="menuItem float-right rounded-full bg-black py-2 px-3">
-                <button>Download CV <i class="fa-solid fa-download rounded-full bg-white text-black p-1 "></i></button>
+            <div class="menuItem float-right ">
+                <button class="rounded-full bg-black py-2 px-3">Download CV <i class="fa-solid fa-download rounded-full bg-white text-black p-1 "></i></button>
             </div>
             <button class="navClose absolute top-2 -left-16 text-4xl rounded-full bg-gray-800 p-2"><i class="fa-regular fa-circle-xmark"></i></button>
         </div>
