--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 <body id="top">
     <div class="homeMain" id="Main">
     <header class="navBarMain sticky top-0">
-        <div class="flex bg-orange-500 w-screen gap-4">
+        <div class="flex bg-orange-500 w-screen gap-4 font-mono">
             <div class="menuItem mx-4 my-1 ">
                     <a href="index.html#top"><img class="logoButton transition-transform hover:scale-110" src="https://placeholder.pics/svg/100x50"></a>
             </div>
-            <div class="flex gap-8 w-full my-2 items-center justify-evenly hidden md:flex ">
+            <div class="flex gap-8 w-full my-1 items-center justify-evenly hidden md:flex ">
                 <div class="menuItem">
-                    <a class="py-3 px-3 text-2xl hover:bg-orange-300 hover:text-black" href="index.html#top">Home</a>
+                    <a class="py-2 px-3 text-2xl hover:bg-orange-300 hover:text-black hover:underline" href="index.html#top">Home</a>
                 </div>
                 <div class="menuItem ">
-                    <a class="py-3 px-3 text-2xl hover:bg-orange-300 hover:text-black" href="about.html">About me</a>
+                    <a class="py-2 px-3 text-2xl hover:bg-orange-300 hover:text-black hover:underline" href="about.html">About me</a>
                 </div>
                 <div class="menuItem ">
-                    <a class="py-3 px-3 text-2xl hover:bg-orange-300 hover:text-black" href="contact.html">Contact me</a>
+                    <a class="py-2 px-3 text-2xl hover:bg-orange-300 hover:text-black hover:underline" href="contact.html">Contact me</a>
                 </div>
                 <div class="menuItem float-right rounded-full bg-black py-2 px-3 ">
                     <button>Download CV <i class="fa-solid fa-download rounded-full bg-white text-black p-1 "></i></button>
@@ -36,30 +36,32 @@
                 </button>
             </div>
         </div>
-        <div class="floatingNav flex flex-col w-5/6 py-2 gap-8 items-center text-center justify-evenly bg-orange-500 absolute right-0 md:hidden">
-            <div class="menuItem w-full">
-                <a class="home2 p-4 hover:bg-orange-300 hover:text-black" href="index.html#top">Home</a>
+        <div class="floatingNav flex flex-col w-5/6 py-2 gap-8 items-right text-right justify-evenly bg-orange-500 absolute right-0 md:hidden">
+            <div class="menuItem w-full mt-2">
+                <a class="home2 p-4 hover:bg-orange-300 hover:text-black hover:underline" href="index.html#top">Home</a>
             </div>
             <div class="menuItem w-full">
-                <a class="p-4 hover:bg-orange-300 hover:text-black" href="about.html">About me</a>
+                <a class="p-4 hover:bg-orange-300 hover:text-black hover:underline" href="about.html">About me</a>
             </div>
             <div class="menuItem w-full ">
-                <a class="p-4 hover:bg-orange-300 hover:text-black" href="contact.html">Contact me</a>
+                <a class="p-4 hover:bg-orange-300 hover:text-black hover:underline " href="contact.html">Contact me</a>
             </div>
-            <div class="menuItem float-right rounded-full bg-black py-2 px-3">
-                <button>Download CV <i class="fa-solid fa-download rounded-full bg-white text-black p-1 "></i></button>
+            <div class="menuItem float-right ">
+                <button class="rounded-full bg-black py-2 px-3">Download CV <i class="fa-solid fa-download rounded-full bg-white text-black p-1 "></i></button>
             </div>
             <button class="navClose absolute top-2 -left-16 text-4xl rounded-full bg-gray-800 p-2"><i class="fa-regular fa-circle-xmark"></i></button>
         </div>
     </header>
     <section class="videoSection">
-    <div class="flex flex-col">
+    <div class="relative">
         <video width="100%" height="80%" autoplay muted > 
             <source src="portfolioVideo.mp4" type="video/mp4">
             Your browsers does not support video
         </video>
-        <button>Pause & Play Place Holder</button>
-        <h1 class="text-5xl my-2 mt-16">About me</h1>
+        <button class="videoPause pause text-4xl text-end text-black z-10 absolute bottom-4 right-4 bg-white p-2 rounded-full"><i class="fa-solid fa-play"></i></i></button>
+    </div>
+    <div class="flex flex-col">
+        <h1 class="text-5xl my-2 mt-4">About me</h1>
         <p class="text-2l">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde molestias corrupti veniam et maiores! Nisi quasi odio non animi. Expedita quis pariatur exercitationem iusto cupiditate rerum aliquid deleniti doloribus earum!</p>
         <i class="text-base text-slate-400">Flavour Text</i>
         <a class="text-left" href="about.html">About me</a>
