--- a/index.html
+++ b/index.html
@@ -52,13 +52,14 @@
             <button class="navClose absolute top-2 -left-16 text-4xl rounded-full bg-gray-800 p-2"><i class="fa-regular fa-circle-xmark"></i></button>
         </div>
     </header>
+
     <section class="videoSection">
     <div class="relative">
         <video width="100%" height="80%" autoplay muted > 
             <source src="portfolioVideo.mp4" type="video/mp4">
             Your browsers does not support video
         </video>
-        <button class="videoPause pause text-4xl text-end text-black z-10 absolute bottom-4 right-4 bg-white p-2 rounded-full"><i class="fa-solid fa-play"></i></i></button>
+        <button class="videoPause pause text-4xl text-end text-black absolute bottom-4 right-4 bg-white p-2 rounded-full"><i class="fa-solid fa-play"></i></i></button>
     </div>
     <div class="flex flex-col">
         <h1 class="text-5xl my-2 mt-4">About me</h1>
@@ -76,19 +77,20 @@
         <a class="text-left" href="contact.html">Contact</a>
     </div>
     </section>
+
     <section>
-        <div class="mt-16 ">
+        <div class="mt-16 paused ">
             <h1 class="text-5xl my-2">Portfolio</h1>
             <div class="scroller flex flex-col">
                 <div class="tag-list scroller__inner portfolio">
-                    <img src="https://placeholder.pics/svg/300x250">
+                    <img  src="https://placeholder.pics/svg/300x250">
                 </div>
             </div>
-            <div>
+            <div class="flex gap-2 justify-center mb-8">
                 <!-- Place Holder for control buttons -->
-                <button>Scroll Left</button>
-                <button>Play</button>
-                <button>Scroll right</button>
+                <button class="leftScroll text-3xl text-end text-black bg-white py-1 px-2 rounded-full"><i class="fa-solid fa-arrow-left"></i></button>
+                <button class="control text-3xl text-end text-black bg-white py-1 px-2 rounded-full"><i class="fa-solid fa-play"></i></button>
+                <button class="rightScroll text-3xl text-end text-black  bg-white py-1 px-2 rounded-full"><i class="fa-solid fa-arrow-right"></i></button>
             </div>
         </div>
     </section>
