--- a/about.html
+++ b/about.html
@@ -53,8 +53,10 @@
     </header>
     <img src="https://placeholder.pics/svg/800x400" width=100%>
     <h1 class="text-5xl my-2">About me</h1>
-    <p class="text-2l">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde molestias corrupti veniam et maiores! Nisi quasi odio non animi. Expedita quis pariatur exercitationem iusto cupiditate rerum aliquid deleniti doloribus earum!</p>
+    <p class="text-2xl">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde molestias corrupti veniam et maiores! Nisi quasi odio non animi. Expedita quis pariatur exercitationem iusto cupiditate rerum aliquid deleniti doloribus earum!</p>
     <h1 class="text-5xl my-2">Skills</h1>
-    <h1 class="text-2l my-2">Error 404 not found</h1>
+    <p class="text-2xl my-2">Error 404 not found</p>
+    <h1 class="text-5xl my-2">Certifications</h1>
+    <p class="text-2xl my-2">content goes here</p>
 </body>
 </html>
