--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <header class="navBarMain sticky top-0">
         <div class="flex bg-orange-500 w-screen gap-4 font-mono">
             <div class="menuItem mx-4 my-1 ">
-                    <a href="index.html#top"><img class="logoButton transition-transform hover:scale-110" src="https://placeholder.pics/svg/100x50"></a>
+                    <a class="home" href="index.html#top"><img class="logoButton transition-transform hover:scale-110" src="https://placeholder.pics/svg/100x50"></a>
             </div>
             <div class="flex gap-8 w-full my-1 items-center justify-evenly hidden md:flex ">
                 <div class="menuItem">
-                    <a class="py-2 px-3 text-2xl hover:bg-orange-300 hover:text-black hover:underline" href="index.html#top">Home</a>
+                    <a class="home py-2 px-3 text-2xl hover:bg-orange-300 hover:text-black hover:underline" href="index.html#top">Home</a>
                 </div>
                 <div class="menuItem ">
                     <a class="py-2 px-3 text-2xl hover:bg-orange-300 hover:text-black hover:underline" href="about.html">About me</a>
@@ -38,7 +38,7 @@
         </div>
         <div class="floatingNav flex flex-col w-5/6 py-2 gap-8 items-right text-right justify-evenly bg-orange-500 absolute right-0 md:hidden">
             <div class="menuItem w-full mt-2">
-                <a class="home2 p-4 hover:bg-orange-300 hover:text-black hover:underline" href="index.html#top">Home</a>
+                <a class="home home2 p-4 hover:bg-orange-300 hover:text-black hover:underline" href="index.html#top">Home</a>
             </div>
             <div class="menuItem w-full">
                 <a class="p-4 hover:bg-orange-300 hover:text-black hover:underline" href="about.html">About me</a>
@@ -83,7 +83,7 @@
             <h1 class="text-5xl my-2">Portfolio</h1>
             <div class="scroller flex flex-col">
                 <div class="tag-list scroller__inner portfolio">
-                    <img  src="https://placeholder.pics/svg/300x250">
+                    <img  src="https://placeholder.pics/svg/250x300">
                 </div>
             </div>
             <div class="flex gap-2 justify-center mb-8">
