--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <script defer src="scripts.js"></script>
     <title>Home</title>
 </head>
-<body id="top">
-    <div class="homeMain" id="Main">
+<body id="top" class="bg-cover bg-gradient-to-b from-black to-gray-900">
+    <div class="homeMain " id="Main">
     <header class="navBarMain sticky top-0">
-        <div class="flex bg-orange-500 w-screen gap-4 font-mono">
-            <div class="menuItem mx-4 my-1 ">
+        <div class="flex bg-orange-500 w-screen gap-4 text-s font-mono">
+            <div class="menuItem mx-1 my-1 ">
                     <a class="home" href="index.html#top"><img class="logoButton transition-transform hover:scale-110" src="https://placeholder.pics/svg/100x50"></a>
             </div>
             <div class="flex gap-8 w-full my-1 items-center justify-evenly hidden md:flex ">
@@ -26,7 +26,7 @@
                 <div class="menuItem ">
                     <a class="py-2 px-3 text-2xl hover:bg-orange-300 hover:text-black hover:underline" href="contact.html">Contact me</a>
                 </div>
-                <div class="menuItem float-right rounded-full bg-black py-2 px-3 ">
+                <div class="menuItem float-right rounded-full bg-black py-2 px-3 mr-2 ">
                     <button>Download CV <i class="fa-solid fa-download rounded-full bg-white text-black p-1 "></i></button>
                 </div>
             </div>
@@ -36,7 +36,7 @@
                 </button>
             </div>
         </div>
-        <div class="floatingNav flex flex-col w-5/6 py-2 gap-8 items-right text-right justify-evenly bg-orange-500 absolute right-0 md:hidden">
+        <div class="floatingNav flex flex-col w-5/6 py-2 gap-8 items-right text-right justify-evenly bg-orange-500 absolute right-0 hidden">
             <div class="menuItem w-full mt-2">
                 <a class="home home2 p-4 hover:bg-orange-300 hover:text-black hover:underline" href="index.html#top">Home</a>
             </div>
@@ -61,20 +61,20 @@
         </video>
         <button class="videoPause pause text-4xl text-end text-black absolute bottom-4 right-4 bg-white p-2 rounded-full"><i class="fa-solid fa-play"></i></i></button>
     </div>
-    <div class="flex flex-col">
+    <div class="flex flex-col mt-16 mx-8 mb-4">
         <h1 class="text-5xl my-2 mt-4">About me</h1>
         <p class="text-2l">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde molestias corrupti veniam et maiores! Nisi quasi odio non animi. Expedita quis pariatur exercitationem iusto cupiditate rerum aliquid deleniti doloribus earum!</p>
         <i class="text-base text-slate-400">Flavour Text</i>
-        <a class="text-left" href="about.html">About me</a>
+        <a class="text-left border w-fit mt-2 p-1" href="about.html">Want to know more</a>
     </div>
     </section>
     <section>
-    <div class="flex flex-col mt-16">
+    <div class="flex flex-col mt-16 mx-8 mb-4">
         <img class="w-screen" src="https://placeholder.pics/svg/600x300">
         <h1 class="text-5xl my-2">Contact me</h1>
         <p class="text-2l">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde molestias corrupti veniam et maiores! Nisi quasi odio non animi. Expedita quis pariatur exercitationem iusto cupiditate rerum aliquid deleniti doloribus earum!</p>
         <i class="text-base text-slate-400">Flavour Text</i>
-        <a class="text-left" href="contact.html">Contact</a>
+        <a class="text-left border w-fit mt-2 p-1" href="contact.html">Contact Info</a>
     </div>
     </section>
 
