--- a/about.html
+++ b/about.html
@@ -13,55 +13,55 @@
     <header class="navBarMain sticky top-0">
         <div class="flex bg-orange-500 w-screen gap-4 text-s font-mono">
             <div class="menuItem mx-1 my-1 ">
-                    <a class="home" href="index.html#top"><img class="logoButton transition-transform hover:scale-110" src="https://placeholder.pics/svg/100x50"></a>
+                    <a class="home" href="index.html#top"><img class="logoButton transition-transform hover:scale-110" src="https://placeholder.pics/svg/100x50" alt="home navigation"></a>
             </div>
             <div class="flex gap-8 w-full my-1 items-center justify-evenly hidden md:flex ">
                 <div class="menuItem">
-                    <a class="home py-2 px-3 text-2xl hover:bg-orange-300 hover:text-black hover:underline" href="index.html#top">Home</a>
+                    <a class="home py-2 px-3 text-2xl hover:bg-orange-300 hover:text-black hover:underline" href="index.html#top" alt="home navigation">Home</a>
                 </div>
                 <div class="menuItem ">
-                    <a class="py-2 px-3 text-2xl hover:bg-orange-300 hover:text-black hover:underline" href="about.html">About me</a>
+                    <a class="py-2 px-3 text-2xl hover:bg-orange-300 hover:text-black hover:underline" href="about.html" alt="about navigation">About me</a>
                 </div>
                 <div class="menuItem ">
-                    <a class="py-2 px-3 text-2xl hover:bg-orange-300 hover:text-black hover:underline" href="contact.html">Contact me</a>
+                    <a class="py-2 px-3 text-2xl hover:bg-orange-300 hover:text-black hover:underline" href="contact.html" alt="contact navigation">Contact me</a>
                 </div>
                 <div class="menuItem float-right rounded-full bg-black py-2 px-3 mr-2 ">
-                    <button>Download CV <i class="fa-solid fa-download rounded-full bg-white text-black p-1 "></i></button>
+                    <button class="download">Download CV <i class="fa-solid fa-download rounded-full bg-white text-black p-1 " alt="download button"></i></button>
                 </div>
             </div>
             <div class="flex menuItem items-center md:hidden absolute right-0 top-2">
-                <button class="navchange float-right md:hidden">   
-                    <img src="menu-svgrepo-com.svg" width=50 height=50>
+                <button class="navchange float-right md:hidden" alt="menu toggle">   
+                    <img src="menu-svgrepo-com.svg" alt="menu icon" width=50 height=50>
                 </button>
             </div>
         </div>
         <div class="floatingNav flex flex-col w-5/6 py-2 gap-8 items-right text-right justify-evenly bg-orange-500 absolute right-0 hidden">
             <div class="menuItem w-full mt-2">
-                <a class="home home2 p-4 hover:bg-orange-300 hover:text-black hover:underline" href="index.html#top">Home</a>
+                <a class="home home2 p-4 hover:bg-orange-300 hover:text-black hover:underline" href="index.html#top" alt="home navigation">Home</a>
             </div>
             <div class="menuItem w-full">
-                <a class="p-4 hover:bg-orange-300 hover:text-black hover:underline" href="about.html">About me</a>
+                <a class="p-4 hover:bg-orange-300 hover:text-black hover:underline" href="about.html" alt="about navigation">About me</a>
             </div>
             <div class="menuItem w-full ">
-                <a class="p-4 hover:bg-orange-300 hover:text-black hover:underline " href="contact.html">Contact me</a>
+                <a class="p-4 hover:bg-orange-300 hover:text-black hover:underline " href="contact.html" alt="contact navigation">Contact me</a>
             </div>
             <div class="menuItem float-right ">
-                <button class="rounded-full bg-black py-2 px-3">Download CV <i class="fa-solid fa-download rounded-full bg-white text-black p-1 "></i></button>
+                <button class="download rounded-full bg-black py-2 px-3">Download CV <i class="fa-solid fa-download rounded-full bg-white text-black p-1" alt="download button"></i></button>
             </div>
-            <button class="navClose absolute top-2 -left-16 text-4xl rounded-full bg-gray-800 p-2"><i class="fa-regular fa-circle-xmark"></i></button>
+            <button class="navClose absolute top-2 -left-16 text-4xl rounded-full bg-gray-800 p-2" alt="close navigation"><i class="fa-regular fa-circle-xmark"></i></button>
         </div>
     </header>
-    <img src="https://placeholder.pics/svg/800x400" width=100%>
+    <img src="https://placeholder.pics/svg/800x400" alt="About Banner" width=100%>
     <div class="m-8">
     <h1 class="text-5xl my-6">About me</h1>
-    <img src="https://placeholder.pics/svg/200x200">
+    <img src="https://placeholder.pics/svg/200x200" alt="Person with glasses">
     <p class="text-2xl">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde molestias corrupti veniam et maiores! Nisi quasi odio non animi. Expedita quis pariatur exercitationem iusto cupiditate rerum aliquid deleniti doloribus earum!</p>
     <h1 class="text-5xl my-6">Skills</h1>
-    <div class="flex gap-8 text-8xl justify-center">
-        <i class="fa-brands fa-js w-22 h-22 border p-2 text-center hover:text-gray-400"></i>
-        <i class="fa-brands fa-java w-22 h-22 border p-2 text-center hover:text-gray-400"></i>
-        <i class="fa-brands fa-python w-22 h-22 border p-2 text-center hover:text-gray-400"></i>
-        <i class="fa-brands fa-php w-22 h-22 border p-2 text-center hover:text-gray-400"></i>
+    <div class="flex gap-8 text-8xl justify-center flex-col md:flex-row ">
+        <i class="fa-brands fa-js w-22 max-w-fit h-22 border p-2 text-center hover:text-gray-400"></i>
+        <i class="fa-brands fa-java w-22 max-w-fit h-22 border p-2 text-center hover:text-gray-400"></i>
+        <i class="fa-brands fa-python w-22 max-w-fit h-22 border p-2 text-center hover:text-gray-400"></i>
+        <i class="fa-brands fa-php w-22 max-w-fit h-22 border p-2 text-center hover:text-gray-400"></i>
     </div>
     <h1 class="text-5xl my-6">Certifications</h1>
     <p class="text-2xl my-6">content goes here</p>
