added text animation based on scroll

--- a/about.html
+++ b/about.html
@@ -53,17 +53,17 @@
     </header>
     <img src="https://placeholder.pics/svg/800x400" alt="About Banner" width=100%>
     <div class="m-8">
-    <h1 class="text-5xl my-6">About me</h1>
+    <h1 class="text-5xl my-6 scrollHide">About me</h1>
     <img src="https://placeholder.pics/svg/200x200" alt="Person with glasses">
     <p class="text-2xl">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde molestias corrupti veniam et maiores! Nisi quasi odio non animi. Expedita quis pariatur exercitationem iusto cupiditate rerum aliquid deleniti doloribus earum!</p>
-    <h1 class="text-5xl my-6">Skills</h1>
-    <div class="flex gap-8 text-8xl justify-center flex-col md:flex-row ">
-        <i class="fa-brands fa-js w-22 max-w-fit h-22 border p-2 text-center hover:text-gray-400"></i>
-        <i class="fa-brands fa-java w-22 max-w-fit h-22 border p-2 text-center hover:text-gray-400"></i>
-        <i class="fa-brands fa-python w-22 max-w-fit h-22 border p-2 text-center hover:text-gray-400"></i>
-        <i class="fa-brands fa-php w-22 max-w-fit h-22 border p-2 text-center hover:text-gray-400"></i>
+    <h1 class="text-5xl my-6 scrollHide">Skills</h1>
+    <div class="flex gap-8 text-8xl justify-center flex-col md:flex-row  ">
+        <i class=" logo scrollHide fa-brands fa-js w-22 max-w-fit h-22 border p-2 text-center hover:text-gray-400 "></i>
+        <i class=" logo scrollHide fa-brands fa-java w-22 max-w-fit h-22 border p-2 text-center hover:text-gray-400 "></i>
+        <i class=" logo scrollHide fa-brands fa-python w-22 max-w-fit h-22 border p-2 text-center hover:text-gray-400 "></i>
+        <i class=" logo scrollHide fa-brands fa-php w-22 max-w-fit h-22 border p-2 text-center hover:text-gray-400 "></i>
     </div>
-    <h1 class="text-5xl my-6">Certifications</h1>
+    <h1 class="text-5xl my-6 scrollHide">Certifications</h1>
     <p class="text-2xl my-6">content goes here</p>
     </div>
 </body>
