--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
     <section>
     <img src="https://placeholder.pics/svg/800x400" alt="Contact Banner" width=100%>
     <div class="m-6">
-        <h1 class="text-5xl">Contact Me</h1>
+        <h1 class="text-5xl scrollHide">Contact Me</h1>
         <img src="https://placeholder.pics/svg/200x200" alt="Person with glasses">
         <p><i class="fa-solid fa-pencil"></i> Name: Milan Fernando</p>
         <p><i class="fa-solid fa-pencil"></i> Age: 24</p>
@@ -62,7 +62,7 @@
         <p><i class="fa-brands fa-linkedin"></i> Linkin: <a a class="hover:text-sky-500 hover:underline" href="">Link Text</a></p>
         <p class="text-2l"><i class="fa-solid fa-phone"></i> Phone Number: +1 (XXX) XXX-XXXX </p>
         <p><i class="fa-solid fa-fax"></i></i> FAX:</p>
-        <h1 class="text-5xl my-2">Contact Form</h1>
+        <h1 class="text-5xl my-2 scrollHide">Contact Form</h1>
         <div>
             <Form class="border-2 bg-gray-500 p-2">
                 <label for="firstName">First Name<sup class="text-red-500">*</sup></label><br>
