--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <button class="videoPause pause text-4xl text-end text-black absolute bottom-4 right-4 bg-white p-2 rounded-full"><i class="fa-solid fa-play" aria-label="toggle video pause/play"></i></i></button>
     </div>
     <div class="flex flex-col mt-16 mx-8 mb-4">
-        <h1 class="text-5xl my-2 mt-4">About me</h1>
+        <h1 class="text-5xl my-2 mt-4 scrollHide">About me</h1>
         <p class="text-2l">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde molestias corrupti veniam et maiores! Nisi quasi odio non animi. Expedita quis pariatur exercitationem iusto cupiditate rerum aliquid deleniti doloribus earum!</p>
         <i class="text-base text-slate-400">Flavour Text</i>
         <a class="text-left border w-fit mt-2 p-1" href="about.html">Want to know more</a>
@@ -71,7 +71,7 @@
     <section>
     <img class="w-screen sm:max-w-fit sm:mx-auto" src="https://placeholder.pics/svg/600x300" alt="Contact banner placeholder">
     <div class="flex flex-col mt-16 mx-8 mb-4">
-        <h1 class="text-5xl my-2">Contact me</h1>
+        <h1 class="text-5xl my-2 scrollHide">Contact me</h1>
         <p class="text-2l">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde molestias corrupti veniam et maiores! Nisi quasi odio non animi. Expedita quis pariatur exercitationem iusto cupiditate rerum aliquid deleniti doloribus earum!</p>
         <i class="text-base text-slate-400">Flavour Text</i>
         <a class="text-left border w-fit mt-2 p-1" href="contact.html">Contact Info</a>
@@ -80,7 +80,7 @@
 
     <section>
         <div class="mt-16 paused ">
-            <h1 class="text-5xl my-2">Portfolio</h1>
+            <h1 class="text-5xl my-2 scrollHide">Portfolio</h1>
             <div class="scroller flex flex-col">
                 <div class="tag-list scroller__inner portfolio">
                     <img  src="https://placeholder.pics/svg/250x300" alt="placeholder image">
