Added Nav logo and fixed styling for nav

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <header class="navBarMain sticky top-0">
         <div class="flex bg-orange-500 w-screen gap-4 text-s font-mono">
             <div class="menuItem mx-1 my-1 ">
-                    <a class="home" href="index.html#top"><img class="logoButton transition-transform hover:scale-110" src="https://placeholder.pics/svg/100x50" alt="home navigation"></a>
+                    <a class="home" href="index.html#top"><img class="logoButton transition-transform hover:scale-110" src="vectorpaint.svg" width="100px" height="50px" alt="home navigation"></a>
             </div>
             <div class="flex gap-8 w-full my-1 items-center justify-evenly hidden md:flex ">
                 <div class="menuItem">
@@ -29,13 +29,13 @@
                     <button class="download">Download CV <i class="fa-solid fa-download rounded-full bg-white text-black p-1 " alt="download button"></i></button>
                 </div>
             </div>
-            <div class="flex menuItem items-center md:hidden absolute right-0 top-2">
+            <div class="flex menuItem items-center md:hidden absolute right-0 top-1">
                 <button class="navchange float-right md:hidden" alt="menu toggle">   
                     <img src="menu-svgrepo-com.svg" alt="menu icon" width=50 height=50>
                 </button>
             </div>
         </div>
-        <div class="floatingNav flex flex-col w-5/6 py-2 gap-8 items-right text-right justify-evenly bg-orange-500 absolute right-0 hidden">
+        <div class="floatingNav flex flex-col w-5/6 py-2 gap-8 items-right text-right justify-evenly bg-orange-500 absolute right-0 hidden md:hidden"">
             <div class="menuItem w-full mt-2">
                 <a class="home home2 p-4 hover:bg-orange-300 hover:text-black hover:underline" href="index.html#top" alt="home navigation">Home</a>
             </div>
@@ -57,11 +57,11 @@
     <img src="https://placeholder.pics/svg/200x200" alt="Person with glasses">
     <p class="text-2xl">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde molestias corrupti veniam et maiores! Nisi quasi odio non animi. Expedita quis pariatur exercitationem iusto cupiditate rerum aliquid deleniti doloribus earum!</p>
     <h1 class="text-5xl my-6 scrollHide">Skills</h1>
-    <div class="flex gap-8 text-8xl justify-center flex-col md:flex-row  ">
+    <div class="max-md:grid max-md:grid-cols-2 gap-8 text-8xl justify-center content-center md:flex-row text-center ">
         <i class=" logo scrollHide fa-brands fa-js w-22 max-w-fit h-22 border p-2 text-center hover:text-gray-400 "></i>
         <i class=" logo scrollHide fa-brands fa-java w-22 max-w-fit h-22 border p-2 text-center hover:text-gray-400 "></i>
         <i class=" logo scrollHide fa-brands fa-python w-22 max-w-fit h-22 border p-2 text-center hover:text-gray-400 "></i>
-        <i class=" logo scrollHide fa-brands fa-php w-22 max-w-fit h-22 border p-2 text-center hover:text-gray-400 "></i>
+        <i class=" logo scrollHide fa-brands fa-php text-8 xl w-22 max-w-fit h-22 border p-2 text-center hover:text-gray-400 "></i>
     </div>
     <h1 class="text-5xl my-6 scrollHide">Certifications</h1>
     <p class="text-2xl my-6">content goes here</p>
