--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <header class="navBarMain sticky top-0">
         <div class="flex bg-orange-500 w-screen gap-4 text-s font-mono">
             <div class="menuItem mx-1 my-1 ">
-                    <a class="home" href="index.html#top"><img class="logoButton transition-transform hover:scale-110" src="https://placeholder.pics/svg/100x50" alt="home navigation"></a>
+                    <a class="home" href="index.html#top"><img class="logoButton transition-transform hover:scale-110" src="vectorpaint.svg" width="100px" height="50px" alt="home navigation"></a>
             </div>
             <div class="flex gap-8 w-full my-1 items-center justify-evenly hidden md:flex ">
                 <div class="menuItem">
@@ -29,13 +29,13 @@
                     <button class="download">Download CV <i class="fa-solid fa-download rounded-full bg-white text-black p-1 " alt="download button"></i></button>
                 </div>
             </div>
-            <div class="flex menuItem items-center md:hidden absolute right-0 top-2">
+            <div class="flex menuItem items-center md:hidden absolute right-0 top-1">
                 <button class="navchange float-right md:hidden" alt="menu toggle">   
                     <img src="menu-svgrepo-com.svg" alt="menu icon" width=50 height=50>
                 </button>
             </div>
         </div>
-        <div class="floatingNav flex flex-col w-5/6 py-2 gap-8 items-right text-right justify-evenly bg-orange-500 absolute right-0 hidden">
+        <div class="floatingNav flex flex-col w-5/6 py-2 gap-8 items-right text-right justify-evenly bg-orange-500 absolute right-0 hidden md:hidden"">
             <div class="menuItem w-full mt-2">
                 <a class="home home2 p-4 hover:bg-orange-300 hover:text-black hover:underline" href="index.html#top" alt="home navigation">Home</a>
             </div>
