--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="navBarMain sticky top-0">
         <div class="flex bg-orange-500 w-screen gap-4 text-s font-mono">
             <div class="menuItem mx-1 my-1 ">
-                    <a class="home" href="index.html#top"><img class="logoButton transition-transform hover:scale-110" src="https://placeholder.pics/svg/100x50" alt="home navigation"></a>
+                    <a class="home" href="index.html#top"><img class="logoButton transition-transform hover:scale-110" src="vectorpaint.svg" width="100px" height="50px" alt="home navigation"></a>
             </div>
             <div class="flex gap-8 w-full my-1 items-center justify-evenly hidden md:flex ">
                 <div class="menuItem">
@@ -30,7 +30,7 @@
                     <button class="download">Download CV <i class="fa-solid fa-download rounded-full bg-white text-black p-1 " alt="download button"></i></button>
                 </div>
             </div>
-            <div class="flex menuItem items-center md:hidden absolute right-0 top-2">
+            <div class="flex menuItem items-center md:hidden absolute right-0 top-1">
                 <button class="navchange float-right md:hidden" alt="menu toggle">   
                     <img src="menu-svgrepo-com.svg" alt="menu icon" width=50 height=50>
                 </button>
@@ -65,7 +65,7 @@
         <h1 class="text-5xl my-2 mt-4 scrollHide">About me</h1>
         <p class="text-2l">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde molestias corrupti veniam et maiores! Nisi quasi odio non animi. Expedita quis pariatur exercitationem iusto cupiditate rerum aliquid deleniti doloribus earum!</p>
         <i class="text-base text-slate-400">Flavour Text</i>
-        <a class="text-left border w-fit mt-2 p-1" href="about.html">Want to know more</a>
+        <a class="text-left border w-fit mt-2 p-1 bg-gray-800 hover:bg-gray-600 " href="about.html">Want to know more</a>
     </div>
     </section>
     <section>
@@ -74,7 +74,7 @@
         <h1 class="text-5xl my-2 scrollHide">Contact me</h1>
         <p class="text-2l">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde molestias corrupti veniam et maiores! Nisi quasi odio non animi. Expedita quis pariatur exercitationem iusto cupiditate rerum aliquid deleniti doloribus earum!</p>
         <i class="text-base text-slate-400">Flavour Text</i>
-        <a class="text-left border w-fit mt-2 p-1" href="contact.html">Contact Info</a>
+        <a class="text-left border w-fit mt-2 p-1 bg-gray-800 hover:bg-gray-600 " href="contact.html">Contact Info</a>
     </div>
     </section>
 
