Added form Validation

--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
                 <input type="text" id="firstName" name="firstname" placeholder="your name.."><br><br>
 
                 <label for="lastName">Last Name<sup class="text-red-500">*</sup></label><br>
-                <input type="text" id="lastName" name="lastname" placeholder="your last name.."><br><br>
+                <input type="text" id="lastName" name="lastname" placeholder="your last name.." ><br><br>
 
                 <label for="postcode">Post Code/Zip Code</label><br>
                 <input type="text" id="postcode" name="postcode/zipcode" placeholder="PostCode or ZipCode.."><br><br>
@@ -79,8 +79,9 @@
 
                 <label for="subject">Subject<sup class="text-red-500">*</sup></label><br>
                 <input type="text" id="subject" name="subject" placeholder="Subject.."><br><br> 
-                
+
                 <label for="message">Message<sup class="text-red-500">*</sup></label><br>
+                <p class="error text-[#FF0000]"></p>
                 <textarea id="message" name="message" placeholder="Message.."></textarea>
                 
                 <input class="p-2 my-2 border hover:bg-slate-300  "type="submit" value="Submit">
