Last bit of styling hopefully

--- a/about.html
+++ b/about.html
@@ -58,10 +58,10 @@
     <p class="text-2xl">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde molestias corrupti veniam et maiores! Nisi quasi odio non animi. Expedita quis pariatur exercitationem iusto cupiditate rerum aliquid deleniti doloribus earum!</p>
     <h1 class="text-5xl my-6 scrollHide">Skills</h1>
     <div class="max-md:grid max-md:grid-cols-2 gap-8 text-8xl justify-center content-center md:flex-row text-center ">
-        <i class=" logo scrollHide fa-brands fa-js w-22 max-w-fit h-22 border p-2 text-center hover:text-gray-400 "></i>
-        <i class=" logo scrollHide fa-brands fa-java w-22 max-w-fit h-22 border p-2 text-center hover:text-gray-400 "></i>
-        <i class=" logo scrollHide fa-brands fa-python w-22 max-w-fit h-22 border p-2 text-center hover:text-gray-400 "></i>
-        <i class=" logo scrollHide fa-brands fa-php text-8 xl w-22 max-w-fit h-22 border p-2 text-center hover:text-gray-400 "></i>
+        <i class=" logo scrollHide fa-brands fa-js w-22 max-w-fit h-22 border p-2 text-center "></i>
+        <i class=" logo scrollHide fa-brands fa-java w-22 max-w-fit h-22 border p-2 text-center "></i>
+        <i class=" logo scrollHide fa-brands fa-python w-22 max-w-fit h-22 border p-2 text-center "></i>
+        <i class=" logo scrollHide fa-brands fa-php text-8 xl w-22 max-w-fit h-22 border p-2 text-center "></i>
     </div>
     <h1 class="text-5xl my-6 scrollHide">Certifications</h1>
     <p class="text-2xl my-6">content goes here</p>
