Tried changing some scroller features

--- a/index.html
+++ b/index.html
@@ -83,10 +83,12 @@
             <h1 class="text-5xl my-2 scrollHide">Portfolio</h1>
             <div class="scroller flex flex-col">
                 <div class="tag-list scroller__inner portfolio">
-                    <img  src="https://placeholder.pics/svg/250x300" alt="placeholder image">
+                    <img class="self-start" src="github-color-svgrepo-com.svg" width="250" height="250" alt="placeholder image">
                 </div>
             </div>
-            <div class="flex gap-2 justify-center mb-8">
+            <div class="border">
+            </div>
+            <div class="flex gap-2 justify-center mb-16 my-16 " >
                 <!-- Place Holder for control buttons -->
                 <button class="slowScroll text-3xl text-end text-black bg-white py-1 px-2 rounded-full"aria-label="slow down button"><i class="fa-solid fa-backward"></i></i></button>
                 <button class="control text-3xl text-end text-black bg-white py-1 px-2 rounded-full" aria-label="pause button"><i class="fa-solid fa-play"></i></button>
